--- a/src/wwwroot/index.html
+++ b/src/wwwroot/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>@sampleName@</title>
-        <link rel="stylesheet" href="Content/@sampleName@.css" />
-        <script src="Content/@sampleName@.head.js"></script>
+        <title>Charting</title>
+        <link rel="stylesheet" href="Content/Charting.css" />
+        <script src="Content/Charting.head.js"></script>
     </head>
     <body>
         <div id="main"></div>
-        <script src="Content/@sampleName@.js"></script>
+        <script src="Content/Charting.js"></script>
     </body>
 </html>
